# CRMLeadsClients

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
assets/css/: app.css
core/: asgi.py  settings.py  urls.py  wsgi.py
crm/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
crm/migrations/: 0001_initial.py
crm/templates/crm/: client_detail.html  client_form.html  client_list.html  interaction_form.html  lead_detail.html  lead_form.html  lead_list.html  pipeline_board.html  profile_form.html
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: index.html
scripts/: entrypoint.sh  wait-for-postgresql.sh
static/css/: tailwind.css
static/js/: theme-toggle.js
templates/: base.html
templates/registration/: login.html  signup.html
